[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ip2c"
author = "Anjan Roy"
author-email = "anjanroy@yandex.com"
home-page = "https://github.com/itzmeanjan/ip2country"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python=">=3.7"
description-file="README.md"

[tool.flit.sdist]
exclude=["systemd", "data"]

[tool.flit.scripts]
ip2c = "ip2c.main:main"
